test/Fail/FunSort-X-SSetOmega-PropOmega.err
FunSort-X-SSetOmega-PropOmega.agda:6.13-18: error: [UnequalSorts]
Propω != funSort _3 SSetω
when checking that the expression A → B has type Propω
